--- a/ex1.html
+++ b/ex1.html
@@ -11,11 +11,12 @@
     <h4>p</h4>
     <h5>a</h5>
     <h6>k</h6>-->
-    <span style="font-size: 36px;">D</span>
-    <span style="font-size: 32px;">e</span>
-    <span style="font-size: 28px;">e</span>
-    <span style="font-size: 24px;">p</span>
-    <span style="font-size: 20px;">a</span>
-    <span style="font-size: 16px;">k</span>
+    <span style="font-size: 36px;">L</span>
+    <span style="font-size: 32px;">A</span>
+    <span style="font-size: 28px;">V</span>
+    <span style="font-size: 24px;">A</span>
+    <span style="font-size: 20px;">N</span>
+    <span style="font-size: 16px;">Y</span>
+    <span style="font-size: 14px;">A</span>
 </body>
 </html>
