--- a/JS-CSS/Links-And-Lists/links1.html
+++ b/JS-CSS/Links-And-Lists/links1.html
@@ -7,6 +7,6 @@
         <title>Links 1</title>
     </head>
     <body>
-        <a href="https://github.com/jnanagopiphanilavanyatadi" target="_blank">ajay_babu Space</a>
+        <a href="https://github.com/jnanagopiphanilavanyatadi" target="_blank"> Space</a>
     </body>
 </html>
